test/sema/typeck/assign/reassign-tuple-variable.dora
fn main() {
    let t = (1i32, 2i32);
    t = (3i32, 4i32);
}
